# Rustipy

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py
src/monad/: __init__.py  option.py
src/rustipy/: option.py  result.py
tests/: test_none_compat.py  test_option.py  test_result.py
